version/0.34/_sources/api/solver/_autosummary/settings/rendering_options.rst.txt
:orphan:

.. _rendering_options:

rendering_options
=================

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.rendering_options
    :show-inheritance:

.. rubric:: Attributes

==========================================================   =====================================================================================================

Attribute                                                                                                                                                  Summary

==========================================================   =====================================================================================================
:ref:`animation_option <animation_option>`                                                                          Using Wireframe / All option during animation.

:ref:`auto_spin <auto_spin>`                                     Enable/disable mouse view rotations to continue to spin the display after the button is released.

:ref:`color_map_alignment <color_map_alignment>`                                                                                          The color bar alignment.

:ref:`double_buffering <double_buffering>`                                                                                        Enable/disable double-buffering.

:ref:`face_displacement <face_displacement>`                                                    Face displacement value in Z-buffer units along the Camera Z-axis.

:ref:`hidden_surface_method <hidden_surface_method>`                                               The method to perform hidden line and hidden surface rendering.

:ref:`hidden_surfaces <hidden_surfaces>`                                                                                    Enable/disable hidden surface removal.

:ref:`front_faces_transparent <front_faces_transparent_1>`                                                                       Make the front faces transparent.

:ref:`show_colormap <show_colormap>`                                                                                                      Enable/Disable colormap.

:ref:`line_weight <line_weight>`                                                                                            The line-weight factor for the window.

:ref:`marker_size <marker_size_4>`                                                                                   The size of markers used to represent points.

:ref:`marker_symbol <marker_symbol_1>`                                                                               The type of markers used to represent points.

==========================================================   =====================================================================================================

.. rubric:: Methods

====================================================   =============================================

Method                                                                                       Summary

====================================================   =============================================
:ref:`device_info <device_info>`                           List information for the graphics device.

:ref:`driver <driver>`                                           Change the current graphics driver.

:ref:`set_rendering_options <set_rendering_options>`                      Set the rendering options.

====================================================   =============================================

.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`views <views>`       'views' child.

====================   ==================

